# AutoCompleteFormBot

./: .gitignore  Goethe auto booking  README.md  docker-compose.yaml
api/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
api/config/: settings.py  urls.py
api/main/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
api/main/migrations/: 0001_initial.py  0002_completedtaskpicture_status_and_more.py
bot/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
